--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ flake8 = "^3.8.4"
 isort = "^5.6.4"
 mypy = "^0.790"
 sqlalchemy-stubs = "^0.3"
+psycopg2-binary = "^2.8.6"
 
 [tool.poetry.scripts]
 check_format = "scripts:check_format"
