--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,9 @@ pydantic = "^1.7.2"
 fastapi = "^0.61.2"
 SQLAlchemy = { version = "^1.3.20", optional = true }
 
+[tool.poetry.extras]
+sqlalchemy = ["SQLAlchemy"]
+
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
 black = "^20.8b1"
