--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,6 +36,8 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
+      - name: Check PIP Version
+        run: pip --version
       - name: Install Poetry
         run: pip install poetry
       - name: Install dependencies
