--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,8 +36,8 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Check PIP Version
-        run: pip --version
+      - name: Upgrade pip
+        run: pip install --upgrade pip
       - name: Install Poetry
         run: pip install poetry
       - name: Install dependencies
