--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,24 +14,11 @@ jobs:
         python-version: [3.6, 3.7, 3.8, 3.9]
       fail-fast: true
 
-    services:
-      postgres:
-        image: postgres:12
-        env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: test
-        ports:
-          - 5432:5432
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-
     steps:
       - name: Check out code
         uses: actions/checkout@v2
+      - name: Build the databases
+        run: docker-compose up -d
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
