--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Install Poetry
         run: pip install poetry
       - name: Install dependencies
-        run: poetry install -E sqlalchemy
+        run: poetry install -E sqlalchemy -E mysqlclient
       - name: Run tests
         run: poetry run test
       - name: Upload coverage
