:wrench: Add github token

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,3 +31,5 @@ jobs:
         run: poetry run test
       - name: Coveralls GitHub Action
         uses: coverallsapp/github-action@v1.1.2
+        with:
+          github-token: ${{ secrets.github_token }}
