--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,23 +28,8 @@ jobs:
       - name: Install dependencies
         run: poetry install -E sqlalchemy
       - name: Run tests
-        run: poetry run test
-      - name: Upload Coverage
-        run: poetry run coveralls
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          COVERALLS_FLAG_NAME: ${{ matrix.python-version }}
-          COVERALLS_PARALLEL: true
-
-  coveralls:
-    name: Finish Coveralls
-    needs: build
-    runs-on: ubuntu-latest
-    container: python:3-slim
-    steps:
-    - name: Finished
-      run: |
-        pip3 install --upgrade coveralls
-        coveralls --finish
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
+        run: |
+          poetry run test
+          poetry run coveralls
