:construction_worker: Add coverage badge (#3)
* :construction_worker: Add coverage badge

* :wrench: Add github token

* test coverage

* empty

* test

* push

* push1

* Update test.yml

* Update test.yml

* Update test.yml

* Update test.yml

* Update pyproject.toml

* Update scripts.py

* Update README.md

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,5 +29,5 @@ jobs:
         run: poetry install -E sqlalchemy
       - name: Run tests
         run: poetry run test
-      - name: Upload coverage
+      - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
