--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "crud-factory"
+name = "crudfactory"
 version = "0.1.0"
 description = "CRUD factory for FastAPI applications."
 authors = ["Marcelo Trylesinski <marcelotryle@gmail.com>"]
