♻️ Refactor whole structure

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,12 @@
 [isort]
 profile = black
-known_first_party = crudfactory
+known_first_party = simple_crud
 
+
+[flake8]
+statistics = True
+max-line-length = 88
+ignore = W503,E203
+
+[mypy]
+follow_imports = skip
