--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,12 +2,14 @@ name: Test
 
 on:
   push:
+    branches:
+      - master
   pull_request:
-    types: [opened, synchronize]
+    branches:
+      - master
 
 jobs:
-
-  build:
+  test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -15,19 +17,16 @@ jobs:
       fail-fast: true
 
     steps:
-      - name: Check out code
-        uses: actions/checkout@v2
-      - name: Build the databases
-        run: docker-compose up -d
-      - name: Set up Python
+      - uses: actions/checkout@v2
+      - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install Poetry
         run: pip install poetry
       - name: Install dependencies
-        run: poetry install -E sqlalchemy
+        run: poetry install
       - name: Run tests
-        run: poetry run test
-      - name: Upload coverage to Codecov
+        run: poetry run pytest tests/ --cov=simple_crud --cov-report=term-missing:skip-covered --cov-report=xml
+      - name: Upload coverage
         uses: codecov/codecov-action@v1
