🔧 Add flake8 and mypy configurations

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,14 @@
 [isort]
 profile = black
-known_first_party = crudfactory
+known_first_party = simplecrud
 
+[flake8]
+statistics = True
+max-line-length = 88
+ignore = W503,E203
+per-file-ignores =
+    **/__init__.py:F401
+
+[mypy]
+plugins = sqlmypy
+follow_imports = skip
