👷 Add MySQL 8.0 docker image

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.8"
 
 services:
   postgres:
@@ -11,7 +11,7 @@ services:
     ports:
       - 5432:5432
 
-  mysql:
+  mysql5:
     image: mysql:5.7
     restart: always
     environment:
@@ -21,3 +21,14 @@ services:
       MYSQL_DATABASE: test
     ports:
       - 3306:3306
+
+  mysql8:
+    image: mysql:8.0
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: mysql
+      MYSQL_USER: mysql
+      MYSQL_PASSWORD: mysql
+      MYSQL_DATABASE: test
+    ports:
+      - 3307:3306
