--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,11 +2,13 @@ name: Test
 
 on:
   push:
+    branches:
+      - main
   pull_request:
-    types: [opened, synchronize]
+    branches:
+      - main
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
     strategy:
