--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,9 +30,8 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = "^3.6"
-pydantic = "^1.7.2"
 fastapi = "^0.61.2"
-SQLAlchemy = { version = "^1.3.20", optional = true }
+SQLAlchemy = "^1.3.20"
 
 [tool.poetry.extras]
 sqlalchemy = ["SQLAlchemy"]
